[package]
name = "aprs-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive", "cargo"] }
csv = "1.3.1"
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.17.1"
tokio = { version = "1.43.0", features = ["full"] }
